[gd_scene load_steps=4 format=3 uid="uid://uynsmvlfkayg"]

[ext_resource type="Script" path="res://src/rng.gd" id="1_xd6t2"]
[ext_resource type="PackedScene" uid="uid://gab4175pns3w" path="res://src/data_builder.tscn" id="2_e5s27"]
[ext_resource type="StyleBox" uid="uid://da2qk67qp6ygk" path="res://res/empty_style.tres" id="2_s52xx"]

[node name="Rng" type="PanelContainer"]
offset_right = 80.0
offset_bottom = 93.0
script = ExtResource("1_xd6t2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RNG"
horizontal_alignment = 1

[node name="Output" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Output  >"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Size" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = ExtResource("2_s52xx")
placeholder_text = "Size"
alignment = 1

[node name="Generate" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = ExtResource("2_s52xx")
disabled = true
text = "Generate"

[node name="DataBuilder" parent="." instance=ExtResource("2_e5s27")]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="VBoxContainer/MarginContainer/VBoxContainer/Size" to="." method="_on_element_gui_input"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/VBoxContainer/Size" to="." method="_on_size_text_changed"]
[connection signal="gui_input" from="VBoxContainer/MarginContainer/VBoxContainer/Generate" to="." method="_on_element_gui_input"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Generate" to="." method="_on_generate_pressed"]
